# API-examples-tests

./: .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
API/GraphQL/: graphql_api_call.py
API/REST/: rest_api_calls.py
data/: data.db  load_data_to_db.py
tests/: test_load_data_to_db.py  test_rest_api_calls.py
