[project]
name = "api-examples-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.1",
    "graphene>=3.4.3",
    "httpx>=0.28.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "ruff>=0.14.2",
    "sqlalchemy>=2.0.44",
    "tool>=0.8.0",
    "uvicorn>=0.38.0",
]
